creating enums for company codes